# Sejong_Dynamic_Control_Toolkit

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
Addition/: simulation_data_copy.sh
Addition/Data_Manager/: CMakeLists.txt  DataSave.cpp  DataSave.h  Status_Display.cpp  data_protocol.h
ControlSystem/DracoP1Rot/DracoP1Rot_Controller/: CMakeLists.txt  DracoController.cpp  DracoController.hpp  DracoSystem.cpp  DracoSystem.hpp  DracoTest.cpp  DracoTest.hpp  StateEstimator.cpp  StateEstimator.hpp  StateProvider.hpp  interface.cpp  interface.hpp
ControlSystem/DracoP1Rot/DracoP1Rot_Controller/ContactSet/: FootContact.cpp  FootContact.hpp
ControlSystem/DracoP1Rot/DracoP1Rot_Controller/ControlSet/: Basic_Ctrl.cpp  Basic_Ctrl.hpp  WBDC_Ctrl.cpp  WBDC_Ctrl.hpp  WBDC_Slip_ctrl.cpp  WBDC_Slip_ctrl.hpp
ControlSystem/DracoP1Rot/DracoP1Rot_Controller/CtrlSet/: BodyCtrl.cpp  BodyCtrl.hpp
ControlSystem/DracoP1Rot/DracoP1Rot_Controller/TaskSet/: BodyTask.cpp  BodyTask.hpp
ControlSystem/DracoP1Rot/DracoP1Rot_Controller/TestSet/: BodyCtrlTest.cpp  BodyCtrlTest.hpp
ControlSystem/Hume/: CMakeLists.txt  Hume_Definition.h
ControlSystem/Hume/Hume_Controller/: Controller_Hume.cpp  Controller_Hume.h  FootForce_Calculator.cpp  FootForce_Calculator.h  HumeSystem.cpp  HumeSystem.h  Integrator.cpp  Integrator.h  MoCap_Receiver.cpp  MoCap_Receiver.h  MoCap_udp.h  Process.cpp  Process.h  Simple_Test.cpp  Simple_Test.h  StateEstimator.h  StateEstimatorFull.cpp  StateEstimatorFull.h  StateEstimatorReduced.cpp  StateEstimatorReduced.h  StateEstimatorVirtual.cpp  StateEstimatorVirtual.h  StateProvider.cpp  StateProvider.h  constraint_library.cpp  constraint_library.h  controller_3D_Walking.cpp  controller_3D_Walking.h  controller_Foot_Test.cpp  controller_Foot_Test.h  controller_Joint_Test.cpp  controller_Joint_Test.h  controller_Orientation_Test.cpp  controller_Orientation_Test.h  controller_Step.cpp  controller_Step.h  interface.cpp  interface.h  task_library.cpp  task_library.h
ControlSystem/Hume/Hume_Model/: Hume_Kin_Model.cpp
ControlSystem/Mercury/Mercury_Controller/: CMakeLists.txt  Controller.cpp  Controller.hpp  MercuryController.cpp  MercuryController.hpp  MercuryTest.cpp  MercuryTest.hpp  StateEstimator.cpp  StateEstimator.hpp  StateProvider.cpp  StateProvider.hpp  Test.cpp  Test.hpp  interface.cpp  interface.hpp
ControlSystem/Mercury/Mercury_Controller/ContactSet/: DoubleContact.cpp  DoubleContact.hpp  DoubleContactBounding.cpp  DoubleContactBounding.hpp  DoubleTransitionContact.cpp  DoubleTransitionContact.hpp  FixedBodyContact.cpp  FixedBodyContact.hpp  FootContact.cpp  FootContact.hpp  SingleContact.cpp  SingleContact.hpp
ControlSystem/Mercury/Mercury_Controller/CtrlSet/: .#TransitionCtrl.hpp  BodyCtrl.cpp  BodyCtrl.hpp  BodyFootCtrl.cpp  BodyFootCtrl.hpp  BodyFootPlanningCtrl.cpp  BodyFootPlanningCtrl.hpp  CoMzRxRyRzCtrl.cpp  CoMzRxRyRzCtrl.hpp  ContactTransBodyCtrl.cpp  ContactTransBodyCtrl.hpp  JPosCtrl.cpp  JPosCtrl.hpp  JPosTargetCtrl.cpp  JPosTargetCtrl.hpp  TransitionCtrl.cpp  TransitionCtrl.hpp
ControlSystem/Mercury/Mercury_Controller/StateEstimator/: .#OriEstAccObs.cpp  .#OriEst_IMU.cpp  BasicAccumulation.cpp  BasicAccumulation.hpp  NoAccState.cpp  NoAccState.hpp  NoBias.cpp  NoBias.hpp  OriEstAccObs.cpp  OriEstAccObs.hpp  OriEst_IMU.cpp  OriEst_IMU.hpp  OriEstimator.hpp
ControlSystem/Mercury/Mercury_Controller/TaskSet/: BodyFootTask.cpp  BodyFootTask.hpp  BodyTask.cpp  BodyTask.hpp  CoMBodyOriTask.cpp  CoMBodyOriTask.hpp  HeightRxRyTask.cpp  HeightRxRyTask.hpp  JPosTask.cpp  JPosTask.hpp
ControlSystem/Mercury/Mercury_Controller/TestSet/: BodyCtrlTest.cpp  BodyCtrlTest.hpp  StepTest.cpp  StepTest.hpp  WalkingTest.cpp  WalkingTest.hpp
ExternalSource/: CMakeLists.txt
Filter/: CMakeLists.txt
MachineLearningPackage/: CMakeLists.txt
MachineLearningPackage/tester/: CMakeLists.txt  Distribtuion_Test.h  LIPM_Plot_System.cpp  LIPM_Plot_System.h  LIPM_Test.h  Link_Test.h  MaceTest.h  PlottingManager.cpp  PlottingManager.h  Plotting_System.h  RBF_Test.h  main.cpp
MachineLearningPackage/tester/python/: PendSim.py  plotting_pendulum.py  sender.py
Optimizer/: CMakeLists.txt
ParamHandler/: CMakeLists.txt  ParamHandler.cpp  ParamHandler.hpp
Planner/: Planner.hpp
Simulator/RBDL_simulator/: .gitignore  CMakeLists.txt  RBDL_Sim_Configration.h  RBDL_Sim_config.h.cmake  README.md  main.cpp
Simulator/RBDL_simulator/SimManager/: CMakeLists.txt  DynControlTester.cpp  DynControlTester.hpp  PlottingManager.cpp  PlottingManager.hpp  Plotting_System.hpp
Simulator/RBDL_simulator/Systems/: README.md
Simulator/RBDL_simulator/Systems/Openchain2DoF/: CMakeLists.txt  DynOpenchain2DTest.cpp  DynOpenchain2DTest.hpp  OC2_Sim_Model.cpp  OC2_Sim_Model.hpp  Openchain2DTest.cpp  Openchain2DTest.hpp  Openchain2D_Definition.h  Openchain2DoF_DynCtrl.cpp  Openchain2DoF_DynCtrl.hpp  PlotSys_Openchain2D.cpp  PlotSys_Openchain2D.hpp  PlotSys_Openchain2DoF.cpp  PlotSys_Openchain2DoF.hpp  SIM_Openchain2DoF_Definition.h
Simulator/RBDL_simulator/Systems/Openchain3DoF/: CMakeLists.txt  OC3_Sim_Model.cpp  Openchain3DoF_DynCtrl.cpp  Openchain3DoF_DynCtrl.hpp  PlotSys_Openchain3DoF.cpp  PlotSys_Openchain3DoF.hpp
Simulator/RBDL_simulator/Systems/Singleleg2D/: DynFloatingLegTest.cpp  DynFloatingLegTest.hpp  FloatingLegTest.cpp  FloatingLegTest.hpp  FloatingLeg_Definition.h  PlotSys_FloatingLeg.cpp  PlotSys_FloatingLeg.hpp
Simulator/RBDL_simulator/Systems/Walker2D/: CMakeLists.txt  PlotSys_Walker2D.cpp  PlotSys_Walker2D.hpp  SIM_Walker2D_Definition.h  Walker2D_DynCtrl.cpp  Walker2D_DynCtrl.hpp  Walker2D_Sim_Model.cpp  Walker2D_Sim_Model.hpp
Simulator/RBDL_simulator/python/: plot_Openchain2DoF.py  plot_Openchain3DoF.py  plot_Singleleg2D.py  plot_Walker2D.py  plot_rtdata.py  sender.py
Simulator/srSimulator/OpenGLRecorder/: CMakeLists.txt  README.md  srRecorder.cpp  srRecorder.h
Utils/: BSplineBasic.h  CMakeLists.txt  DataManager.cpp  DataManager.hpp  LQR.cpp  Sejong_Thread.cpp  pseudo_inverse.cpp  pseudo_inverse.hpp  utilities.cpp  utilities.hpp  wrap_eigen.cpp  wrap_eigen.hpp
(+428 files in other folders)
